--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -352,9 +352,9 @@ layers:
                 filter: { is_tunnel: yes, $zoom: { min: 13 } }
                 draw:
                     lines:
-                        color: [0.201,0.286,0.409]
-                        outline:
-                            color: [0.276,0.568,0.950]
+                        color: [0.184,0.263,0.373]
+                        # outline:
+                        #     color: [0.276,0.568,0.950]
             in-hospital:
                 filter: { landuse_kind: hospital }
                 draw:
@@ -388,39 +388,39 @@ layers:
             draw:
                 lines:
                     # color: [[14,[0.400,0.561,0.718]],[15,[0.239,0.145,0.627]]]
-                    color: [0.196,0.196,0.312]
+                    color: [0.175,0.175,0.283]
                     width: [[13,0px],[14,0.35px],[15,1px],[16,1.25px],[17,1.5px],[19,4px],[20,5px]]
                     outline:
                         # color: [[14,[0.400,0.561,0.718]],[16,[0.263,0.467,0.690]]]
-                        color: [0.141,0.337,0.463]
+                        color: [0.236,0.337,0.477]
                         width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,3px]]
             pedestrian:
                 filter: { highway: pedestrian }
                 draw:
                     lines:
                         # color: [[14,[0.400,0.561,0.718]],[15,[0.109,0.169,0.320]]]
-                        color: [0.196,0.196,0.312]
+                        color: [0.175,0.175,0.283]
                         width: [[13,0px],[14,0.35px],[15,1px],[16,1.25px],[17,1.5px],[19,4px],[20,5px]]
-                        # outline:
-                        #     color: [[14,[0.400,0.561,0.718]],[16,[0.078,0.464,0.582]]]
-                        #     width: [[14,0px],[15,0.35px],[16,1px],[17,2px]]
+                        outline:
+                            color: [0.236,0.337,0.477]
+                            width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,3px]]
             in-hospital:
                 filter: { landuse_kind: hospital }
                 draw:
                     lines:
                         color: [0.188,0.114,0.510]
             in-park-pitch:
-                filter: { landuse_kind: [park,pitch,parking] }
+                filter: { landuse_kind: [park,pitch,parking,golf_course] }
                 draw:
                     lines:
-                        color: [0.211,0.174,0.381]
+                        color: [0.175,0.175,0.283]
                         outline:
-                            width: 0px
+                            width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,3px]]
             in-pedestrian:
                 filter: { landuse_kind: [pedestrian,common] }
                 draw:
                     lines:
-                        color: [0.211,0.174,0.381]
+                        color: [0.192,0.159,0.351]
             tunnel:
                 filter: { is_tunnel: yes }
                 draw:
@@ -433,18 +433,16 @@ layers:
             filter: { kind: path, highway: track }
             draw:
                 lines:
-                    color: [0.196,0.196,0.312]
+                    color: [0.175,0.175,0.283]
                     width: [[13,0px],[14,0.35px],[15,1px],[16,1.25px],[17,1.5px],[19,4px],[20,5px]]
-                    # outline:
-                    #     color: [[14,[0.400,0.561,0.718]],[16,[0.078,0.464,0.582]]]
-                    #     width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,4px]]
+                    outline:
+                        color: [0.236,0.337,0.477]
+                        width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,3px]]
             in-park-pitch:
-                filter: { landuse_kind: [park,pitch,parking] }
+                filter: { landuse_kind: [park,pitch,parking,golf_course] }
                 draw:
                     lines:
-                        color: [0.211,0.174,0.381]
-                        outline:
-                            width: 0px
+                        color: [0.192,0.159,0.351]
 
         airport-lines:
             filter: { kind: minor_road, aeroway: [runway,taxiway] }
