--- a/layers/water.yaml
+++ b/layers/water.yaml
@@ -40,7 +40,7 @@ layers:
                     style: water
 
         other_areas:
-            filter: { not: { kind: [ocean, lake, water, reservoir, playa] }, $zoom: { min: 10 }, area: { min: 100 } }
+            filter: { not: { kind: [ocean, lake, water, reservoir] }, $zoom: { min: 10 }, area: { min: 100 } }
             draw:
                 polygons:
                     style: water
@@ -58,8 +58,15 @@ layers:
                         polygons:
                             style: polygons
                             # color: [0.000,0.804,0.776]
-                            color: [0.020,0.616,1.000]
+                            color: [0.202,0.263,0.404]
 
+        playas:
+            filter: { kind: playa, $zoom: { min: 4 } }
+            draw:
+                polygons:
+                    style: polygons
+                    order: global.order
+                    color: [[4,[0.263,0.361,0.498]],[9,[0.193,0.275,0.389]]]
 
         swimming_pool:
             filter: { kind: swimming_pool }
