--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -348,6 +348,19 @@ layers:
                         # color: [[12,[0.248,0.397,0.439]],[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
                         color: [[12,[0.082,0.133,0.259]],[14,[0.082,0.133,0.259]],[15,[0.212,0.302,0.427]],[17,[0.212,0.302,0.427]]]
                         width: [[12,0px],[13,0px],[14,0.4px],[15,0.5px],[17,2px],[18,2px]]
+            
+            traffic:
+                filter: { $zoom: { min: 18 } }
+                draw:
+                    lines:
+                        style: traffic-animation
+
+                oneway:
+                    filter: { oneway: yes } # should be `true` for 1.0 tiles
+                    draw:
+                        lines:
+                            style: traffic-animation-oneway
+
             tunnel:
                 filter: { is_tunnel: yes, $zoom: { min: 13 } }
                 draw:
