--- a/layers/landuse.yaml
+++ b/layers/landuse.yaml
@@ -220,7 +220,7 @@ layers:
                     filter: { kind: [pier,bridge,breakwater,groyne,dike,cutline] }
                     draw:
                         polygons:
-                            color: [0.004,0.165,0.929]
+                            color: [[13,[0.212,0.302,0.427]],[16,[0.204,0.292,0.730]]]
                             visible: true
         tier6:
             filter:
