--- a/tron.yaml
+++ b/tron.yaml
@@ -1,6 +1,6 @@
 import:
     # Global variables
-    # - global.yaml
+    - layers/global.yaml
     # Styles
     - styles/lines.yaml
     - styles/polygons.yaml
@@ -18,162 +18,6 @@ import:
     # - layers/telecom.yaml
     - layers/pois.yaml
     - layers/ux-sdk-overlay.yaml
-
-global:
-    ux_application_mode: navigation
-    ux_language: false             # l10n language code, trusting OSM in v0.10 tiles, fixed in v1.0 tiles
-    ux_language_fallback: false    # l10n language code, trusting OSM in v0.10 tiles, fixed in v1.0 tiles
-    ux_language_text_source: |
-        function() {
-            // if a ux_langauge has been defined use that, else if there is feature name in the fallback_ux_language then use that, else use the feature's default name in the local language
-            return (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature.name;
-        }
-    ux_language_text_source_short: |
-        function() {
-            return (global.ux_language && feature['name:short:'+global.ux_language]) || (global.ux_language_fallback && feature['name:short:'+global.ux_language_fallback]) || feature['name:short'];
-        }
-    ux_language_text_source_short_proxy_name: |
-        function() {
-            var name  = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'] || '';
-            var short = (global.ux_language && feature['name:short:'+global.ux_language]) || (global.ux_language_fallback && feature['name:short:'+global.ux_language_fallback]) || feature['name:short'];
-            return short ? name : '';
-        }
-    ux_language_text_source_abbreviation: |
-        function() {
-            var name  = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'] || '';
-            var abbrev = (global.ux_language && feature['name:abbreviation:'+global.ux_language]) || (global.ux_language_fallback && feature['name:abbreviation:'+global.ux_language_fallback]) || feature['name:abbreviation'];
-            return abbrev || name;
-        }
-    ux_language_text_source_iata: |
-        function() {
-            var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'];
-            if(feature.iata) {
-                if (name) {
-                    return name + ' (' + feature.iata + ')';
-                }
-                else {
-                    return feature.iata;
-                }
-            } else {
-                return name;
-            }
-        }
-    ux_language_text_source_ocean: |
-        function() {
-            var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'] || '';
-            return name.split('').join('  ');
-        }
-    ux_language_text_source_sea: |
-        function() {
-            var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'] || '';
-            return name.split('').join(' ');
-        }
-    ux_language_text_source_continent: |
-        function() {
-            var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'] || '';
-            return name.split('').join(' ');
-        }
-    ux_language_text_source_road_ref_and_name: |
-        function() {
-            var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'];
-            if(feature.ref && name) {
-                return (feature.ref + ' ' + name);
-            } else {
-                return name;
-            }
-        }
-    ux_language_text_source_road_ref_and_name_short: |
-        function() {
-            var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'];
-            if (feature.ref && (feature.ref.length < 6) && name) {
-                return feature.ref + ' ' + name;
-            } else {
-                return name;
-            }
-        }
-    ux_language_text_source_piste_advanced: |
-        function() {
-            var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'];
-            return name ? ('◆ ' + name) : '◆';
-        }
-    ux_language_text_source_piste_expert: |
-        function() {
-            var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'];
-            return name ? ('◆◆ ' + name) : '◆◆';
-        }
-    ux_language_text_source_building_and_address: |
-        function() {
-            var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'];
-            if (name && feature.addr_housenumber) {
-                return name + '\n' + feature.addr_housenumber;
-            } else {
-                return name;
-            }
-        }
-
-    # To facilitate data visualizations several recommended sort orders are provided
-    #
-    # Your classic raster map overlay.
-    # Over all line and polygon features.
-    # Under map labels (icons and text), under UI elements
-    # (like routeline and search result pins).
-    sdk_order_over_everything_but_text_0: 490
-    sdk_order_over_everything_but_text_1: 491
-    sdk_order_over_everything_but_text_2: 492
-    sdk_order_over_everything_but_text_3: 493
-    sdk_order_over_everything_but_text_4: 494
-    sdk_order_over_everything_but_text_5: 495
-    sdk_order_over_everything_but_text_6: 496
-    sdk_order_over_everything_but_text_7: 497
-    sdk_order_over_everything_but_text_8: 498
-    sdk_order_over_everything_but_text_9: 499
-    #
-    # Your classic "underlay"
-    # Under roads. Above borders, water, landuse, and earth.
-    sdk_order_under_roads_0: 290
-    sdk_order_under_roads_1: 291
-    sdk_order_under_roads_2: 292
-    sdk_order_under_roads_3: 293
-    sdk_order_under_roads_4: 294
-    sdk_order_under_roads_5: 295
-    sdk_order_under_roads_6: 296
-    sdk_order_under_roads_7: 297
-    sdk_order_under_roads_8: 298
-    sdk_order_under_roads_9: 299
-    #
-    # Under water.
-    # Above earth and most landuse.
-    sdk_order_under_water_0: 190
-    sdk_order_under_water_1: 191
-    sdk_order_under_water_2: 192
-    sdk_order_under_water_3: 193
-    sdk_order_under_water_4: 194
-    sdk_order_under_water_5: 195
-    sdk_order_under_water_6: 196
-    sdk_order_under_water_7: 197
-    sdk_order_under_water_8: 198
-    sdk_order_under_water_9: 199
-    #
-    # Under everything.
-    # Tip: disable earth layer.
-    sdk_order_under_everything_0: 0
-    sdk_order_under_everything_1: 1
-    sdk_order_under_everything_2: 2
-    sdk_order_under_everything_3: 3
-    sdk_order_under_everything_4: 4
-    sdk_order_under_everything_5: 5
-    sdk_order_under_everything_6: 6
-    sdk_order_under_everything_7: 7
-    sdk_order_under_everything_8: 8
-    sdk_order_under_everything_9: 9
-    #
-
-    #label visibility
-    text_visible_admin: true
-    text_visible_populated_places: true
-    icon_visible_populated_places: true
-    text_visible_neighbourhoods: true
-    text_visible_neighbourhoods_e: true
 
 
 # Sources
