--- a/layers/landuse.yaml
+++ b/layers/landuse.yaml
@@ -250,7 +250,9 @@ layers:
                 draw:
                     polygons:
                         style: landuse-tier6-pedestrian
-                        color: [0.160,0.229,0.420]
+                        # color: [0.160,0.229,0.420]
+                        # color: [0.220,0.314,0.444]
+                        color: [0.167,0.242,0.450]
                         visible: true
 
     landuse-not-filtered:
@@ -307,7 +309,7 @@ styles:
 
                 GRID_SCALE: 15.
                 GRID_WIDTH: zoom()*.7
-                GRID_BACKGROUND_COLOR: vec3(0.275,0.267,0.529)
+                GRID_BACKGROUND_COLOR: vec3(0.251,0.267,0.486)
     landuse-tier4-power:
         mix: [polygons-dots]
         shaders:
@@ -339,7 +341,7 @@ styles:
                 NORMAL_TEXTURE_INDEX: 0
                 DOTS_DIR: vec3(-0.600,-0.420,0.600)
 
-                DOTS_COLOR: vec3(0.392,0.196,0.384)
+                DOTS_COLOR: vec3(0.345,0.224,0.392)
                 DOTS_SCALE: 30.
                 DOTS_SIZE: shade*2.
             blocks:
