--- a/layers/pois.yaml
+++ b/layers/pois.yaml
@@ -17,30 +17,30 @@ textures:
             pitch: [132, 168, 36, 36]
             athletic_sports: [132, 168, 36, 36]
             recreation_ground: [132, 168, 36, 36]
-            atm: [862, 126, 36, 36]
-            automotive-shop: [948, 126, 36, 36]
-            car_repair: [948, 126, 36, 36]
-            automotive: [948, 126, 36, 36]
-            tyres: [948, 126, 36, 36]
+            atm: [864, 126, 36, 36]
+            automotive-shop: [950, 126, 36, 36]
+            car_repair: [950, 126, 36, 36]
+            automotive: [950, 126, 36, 36]
+            tyres: [950, 126, 36, 36]
             bakery: [486, 168, 36, 36]
             pastry: [486, 168, 36, 36]
             chocolate: [486, 168, 36, 36]
-            bank: [904, 126, 36, 36]
+            bank: [906, 126, 36, 36]
             bar: [178, 168, 36, 36]
             pub: [178, 168, 36, 36]
-            baseball-field: [444, 84, 36, 36]
+            baseball-field: [445, 84, 36, 36]
             basketball-court: [400, 84, 36, 36]
             beach: [578, 84, 36, 36]
             beer-garden: [174, 210, 36, 36]
             biergarten: [174, 210, 36, 36]
             brewery: [174, 210, 36, 36]
             bench: [522, 0, 36, 36]
-            bicycle-parking: [588, 126, 36, 36]
-            bike-shop: [816, 126, 36, 36]
-            bicycle: [816, 126, 36, 36]
-            bicycle_rental: [816, 126, 36, 36]
-            bike: [816, 126, 36, 36]
-            bike_shop: [816, 126, 36, 36]
+            bicycle-parking: [590, 126, 36, 36]
+            bike-shop: [818, 126, 36, 36]
+            bicycle: [818, 126, 36, 36]
+            bicycle_rental: [818, 126, 36, 36]
+            bike: [818, 126, 36, 36]
+            bike_shop: [818, 126, 36, 36]
             boat-ferry: [784, 0, 36, 36]
             ferry_terminal: [784, 0, 36, 36]
             ferry-boat: [784, 0, 36, 36]
@@ -48,8 +48,8 @@ textures:
             boat-ramp: [90, 84, 36, 36]
             slipway: [90, 84, 36, 36]
             boat_ramp: [90, 84, 36, 36]
-            bookstore: [770, 126, 36, 36]
-            books: [770, 126, 36, 36]
+            bookstore: [772, 126, 36, 36]
+            books: [772, 126, 36, 36]
             bridge: [842, 84, 36, 36]
             buddhism: [710, 84, 36, 36]
             building: [354, 168, 36, 36]
@@ -65,20 +65,20 @@ textures:
             bus-station: [740, 0, 36, 36]
             bus_stop: [740, 0, 36, 36]
             bus_station: [740, 0, 36, 36]
-            butcher: [852, 42, 36, 36]
+            butcher: [850, 42, 36, 36]
             campground: [754, 84, 36, 36]
             camp_site: [754, 84, 36, 36]
             caravan_site: [754, 84, 36, 36]
             candy-store: [928, 168, 36, 36]
             candy: [928, 168, 36, 36]
             confectionery: [928, 168, 36, 36]
-            capital-l: [410, 210, 18, 18]
-            capital-m: [388, 210, 14, 14]
-            capital-s: [368, 212, 10, 10]
-            capital-xl: [464, 210, 22, 22]
-            capital-xs: [354, 212, 8, 8]
-            car-dealership: [726, 126, 36, 36]
-            car: [726, 126, 36, 36]
+            capital-l: [408, 210, 18, 18]
+            capital-m: [386, 210, 14, 14]
+            capital-s: [366, 212, 10, 10]
+            capital-xl: [462, 210, 22, 22]
+            capital-xs: [352, 212, 8, 8]
+            car-dealership: [728, 126, 36, 36]
+            car: [728, 126, 36, 36]
             castle: [354, 42, 36, 36]
             fort: [354, 42, 36, 36]
             cemetery: [666, 84, 36, 36]
@@ -98,14 +98,14 @@ textures:
             convenience_store: [0, 84, 36, 36]
             beverages: [0, 84, 36, 36]
             courthouse: [348, 0, 36, 36]
-            department-store: [680, 126, 36, 36]
-            department_store: [680, 126, 36, 36]
+            department-store: [682, 126, 36, 36]
+            department_store: [682, 126, 36, 36]
             drinking-water: [130, 210, 36, 36]
-            dry-cleaning: [942, 42, 36, 36]
-            dry_cleaning: [942, 42, 36, 36]
-            electronics-store: [542, 126, 36, 36]
-            electronics: [542, 126, 36, 36]
-            computer: [542, 126, 36, 36]
+            dry-cleaning: [940, 42, 36, 36]
+            dry_cleaning: [940, 42, 36, 36]
+            electronics-store: [544, 126, 36, 36]
+            electronics: [544, 126, 36, 36]
+            computer: [544, 126, 36, 36]
             factory: [310, 168, 36, 36]
             industrial: [310, 168, 36, 36]
             chimney: [310, 168, 36, 36]
@@ -118,9 +118,9 @@ textures:
             generator: [310, 168, 36, 36]
             fire-station: [304, 0, 36, 36]
             fire_station: [304, 0, 36, 36]
-            fitness: [806, 42, 36, 36]
-            gym: [806, 42, 36, 36]
-            fitness_center: [806, 42, 36, 36]
+            fitness: [804, 42, 36, 36]
+            gym: [804, 42, 36, 36]
+            fitness_center: [804, 42, 36, 36]
             flower-shop: [90, 126, 36, 36]
             florist: [90, 126, 36, 36]
             forest: [974, 168, 36, 36]
@@ -130,8 +130,8 @@ textures:
             garden: [622, 84, 36, 36]
             gas-station: [884, 168, 36, 36]
             fuel: [884, 168, 36, 36]
-            generic: [308, 210, 36, 36]
-            subway_entrance: [308, 210, 36, 36]
+            generic: [306, 210, 36, 36]
+            subway_entrance: [306, 210, 36, 36]
             generic-sport: [268, 126, 36, 36]
             gift-shop: [44, 126, 36, 36]
             gift: [44, 126, 36, 36]
@@ -141,29 +141,29 @@ textures:
             townhall: [88, 168, 36, 36]
             public_building: [88, 168, 36, 36]
             embassy: [88, 168, 36, 36]
-            grocery-store: [496, 126, 36, 36]
-            supermarket: [496, 126, 36, 36]
-            health_food: [496, 126, 36, 36]
-            greengrocer: [496, 126, 36, 36]
+            grocery-store: [498, 126, 36, 36]
+            supermarket: [498, 126, 36, 36]
+            health_food: [498, 126, 36, 36]
+            greengrocer: [498, 126, 36, 36]
             harbor-marina: [44, 168, 36, 36]
             marina: [44, 168, 36, 36]
             harbor: [44, 168, 36, 36]
             harbor_marina: [44, 168, 36, 36]
             dock: [44, 168, 36, 36]
             mooring: [44, 168, 36, 36]
-            hardware-store: [760, 42, 36, 36]
-            hardware: [760, 42, 36, 36]
-            doityourself: [760, 42, 36, 36]
-            paint: [760, 42, 36, 36]
+            hardware-store: [758, 42, 36, 36]
+            hardware: [758, 42, 36, 36]
+            doityourself: [758, 42, 36, 36]
+            paint: [758, 42, 36, 36]
             historic-site: [0, 126, 36, 36]
             hospital: [174, 0, 36, 36]
             hotel: [696, 0, 36, 36]
             motel: [696, 0, 36, 36]
             hostel: [696, 0, 36, 36]
-            ice-cream-shop: [218, 210, 36, 36]
-            ice_cream: [218, 210, 36, 36]
-            information: [262, 210, 36, 36]
-            info: [262, 210, 36, 36]
+            ice-cream-shop: [216, 210, 36, 36]
+            ice_cream: [216, 210, 36, 36]
+            information: [260, 210, 36, 36]
+            info: [260, 210, 36, 36]
             jewelry-store: [670, 42, 36, 36]
             jewelry: [670, 42, 36, 36]
             jewelry_store: [670, 42, 36, 36]
@@ -180,9 +180,9 @@ textures:
             light_rail: [652, 0, 36, 36]
             tram_stop: [652, 0, 36, 36]
             lighthouse: [220, 84, 36, 36]
-            liquor-store: [450, 126, 36, 36]
-            alcohol: [450, 126, 36, 36]
-            liquor: [450, 126, 36, 36]
+            liquor-store: [452, 126, 36, 36]
+            alcohol: [452, 126, 36, 36]
+            liquor: [452, 126, 36, 36]
             mall: [580, 42, 36, 36]
             market: [534, 42, 36, 36]
             variety_store: [534, 42, 36, 36]
@@ -216,7 +216,7 @@ textures:
             optician: [220, 42, 36, 36]
             optical_shop: [220, 42, 36, 36]
             park: [180, 126, 36, 36]
-            parking: [634, 126, 36, 36]
+            parking: [636, 126, 36, 36]
             performing-arts: [530, 168, 36, 36]
             theater: [530, 168, 36, 36]
             theatre: [530, 168, 36, 36]
@@ -224,8 +224,8 @@ textures:
             pet: [176, 42, 36, 36]
             pet-service: [176, 42, 36, 36]
             pet_store: [176, 42, 36, 36]
-            pharmacy: [898, 42, 36, 36]
-            chemist: [898, 42, 36, 36]
+            pharmacy: [896, 42, 36, 36]
+            chemist: [896, 42, 36, 36]
             photography-lab: [132, 42, 36, 36]
             photo_studio: [132, 42, 36, 36]
             photography_lab: [132, 42, 36, 36]
@@ -271,7 +271,7 @@ textures:
             sports: [964, 0, 36, 36]
             outdoor: [964, 0, 36, 36]
             spring: [264, 84, 36, 36]
-            stadium: [404, 126, 36, 36]
+            stadium: [406, 126, 36, 36]
             subway-entrance: [436, 0, 36, 36]
             synagogue: [44, 0, 36, 36]
             tailor-shop: [918, 0, 36, 36]
@@ -281,16 +281,16 @@ textures:
             theme_park: [930, 84, 36, 36]
             miniature_golf: [930, 84, 36, 36]
             toilets: [798, 84, 36, 36]
-            townspot-l: [668, 210, 18, 18]
-            townspot-l-rev: [548, 210, 24, 24]
-            townspot-m: [646, 210, 14, 14]
-            townspot-m-rev: [524, 210, 20, 20]
-            townspot-s: [626, 210, 12, 12]
-            townspot-s-rev: [506, 210, 12, 12]
-            townspot-xl: [694, 210, 22, 22]
-            townspot-xl-rev: [580, 212, 20, 20]
-            townspot-xs: [608, 210, 10, 10]
-            townspot-xs-rev: [492, 212, 6, 6]
+            townspot-l: [666, 210, 18, 18]
+            townspot-l-rev: [546, 210, 24, 24]
+            townspot-m: [644, 210, 14, 14]
+            townspot-m-rev: [522, 210, 20, 20]
+            townspot-s: [624, 210, 12, 12]
+            townspot-s-rev: [504, 210, 12, 12]
+            townspot-xl: [692, 210, 22, 22]
+            townspot-xl-rev: [578, 212, 20, 20]
+            townspot-xs: [606, 210, 10, 10]
+            townspot-xs-rev: [490, 212, 6, 6]
             toy-game-store: [872, 0, 36, 36]
             toys: [872, 0, 36, 36]
             baby_goods: [872, 0, 36, 36]
@@ -305,17 +305,17 @@ textures:
             locate-off: [334, 342, 72, 72]
             ux-locate-on: [254, 342, 72, 72]
             locate-on: [254, 342, 72, 72]
-            ux-route-arrow: [724, 210, 128, 128]
-            route-arrow: [724, 210, 128, 128]
-            ux-route-start: [938, 210, 72, 92]
-            route-start: [938, 210, 72, 92]
-            ux-route-stop: [860, 210, 72, 92]
-            route-stop: [860, 210, 72, 92]
+            ux-route-arrow: [722, 210, 128, 128]
+            route-arrow: [722, 210, 128, 128]
+            ux-route-start: [936, 210, 72, 92]
+            route-start: [936, 210, 72, 92]
+            ux-route-stop: [858, 210, 72, 92]
+            route-stop: [858, 210, 72, 92]
             ux-search-active: [94, 342, 72, 108]
             search-active: [94, 342, 72, 108]
             ux-search-inactive: [174, 342, 72, 108]
             search-inactive: [174, 342, 72, 108]
-            ux-transit-stop: [436, 212, 20, 20]
+            ux-transit-stop: [434, 212, 20, 20]
             veterinarian: [132, 0, 36, 36]
             pet_care: [132, 0, 36, 36]
             veterinary: [132, 0, 36, 36]
@@ -778,11 +778,11 @@ layers:
 
             text_colors:
                 restaurant:
-                    filter: { kind: [restaurant,cafe,fast_food,bakery,pub,bar,ice_cream] }
+                    filter: { kind: [restaurant,cafe,fast_food,bakery,pub,bar,ice_cream,wine,biergarten,brewery] }
                     draw: { icons: { text: { font: { fill: [0.212,1.000,0.882] } } } }
                     # draw: { icons: { text: { font: { fill: [0.174,0.830,0.732] } } } }
                 hotel:
-                    filter: { kind: [hotel,hostel,motel,company,office,substation,plant,generator,wastewater_plant,bench] }
+                    filter: { kind: [hotel,hostel,motel,company,office,substation,plant,generator,wastewater_plant,bench,slipway,insurance] }
                     draw: { icons: { text: { font: { fill: [0.900,0.750,1.000] } } } }
                 pharmacy:
                     filter: { kind: pharmacy }
@@ -820,10 +820,10 @@ layers:
                     filter: { kind: [memorial,monument] }
                     draw: { icons: { text: { font: { fill: [0.817,0.752,0.857] } } } }
                 bridge:
-                    filter: { kind: [bridge,toilets,fuel,optician,car,car_repair,viewpoint,car_sharing,landmark] }
+                    filter: { kind: [bridge,toilets,fuel,optician,car,car_repair,viewpoint,car_sharing,landmark,quarry] }
                     draw: { icons: { text: { font: { fill: [0.851,0.796,0.851] } } } }
                 garden:
-                    filter: { kind: [garden,playground,zoo,camp_site,marina,peak,volcano,theme_park,water_park,caravan_site,pier] }
+                    filter: { kind: [garden,playground,zoo,camp_site,marina,peak,volcano,theme_park,water_park,caravan_site,pier,fort,castle,spring] }
                     draw: { icons: { text: { font: { fill: [0.345,0.953,0.769] } } } }
                 vet:
                     filter: { kind: [veterinary,pet,pet_store] }
