water color adjustment

--- a/layers/water.yaml
+++ b/layers/water.yaml
@@ -6,7 +6,8 @@ layers:
                 style: water
                 order: global.order
                 # color: [0.149,0.153,0.329]
-                color: [0.189,0.193,0.369]
+                # color: [0.189,0.193,0.369]
+                color: [0.200,0.200,0.360]
 
         later:
             filter: { $zoom: { min: 11 } }
